--- a/servelet-demo/pom.xml
+++ b/servelet-demo/pom.xml
@@ -7,6 +7,13 @@
     <groupId>sumu.today</groupId>
     <artifactId>servelet-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
