--- a/servelet-demo/WebContent/WEB-INF/web.xml
+++ b/servelet-demo/WebContent/WEB-INF/web.xml
@@ -89,6 +89,10 @@
         <location>/ErrorHandler</location>
     </error-page>
     <error-page>
+        <error-code>500</error-code>
+        <location>/ErrorHandler</location>
+    </error-page>
+    <error-page>
         <exception-type>java.lang.Throwable</exception-type >
         <location>/ErrorHandler</location>
     </error-page>
