--- a/servelet-demo/pom.xml
+++ b/servelet-demo/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.73</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
